# pkgd-registry-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  registry.db
.github/workflows/: deploy.yml
.sqlx/: query-0b99654ed8c5050ecd52c04d60282821190bc26de5168f11756c1e9265d96cfe.json  query-178ea042f09e50e3b451412341a6a48f5ed67a7c6642f1e608355a2f3f897387.json  query-88ccb1f60c0b7e81a7977300f2158620c018b159f70aa0fc869e18dfdcf5a72b.json
src/: error.rs  main.rs  models.rs  state.rs  utils.rs
src/handlers/: admin.rs  auth.rs  mod.rs  package.rs  web.rs
storage/: dummy-1.0.0.json  pkgd-1.1.0.json  pkgd-1.2.0.json  pkgd-1.3.1.json  pkgd-1.4.0.json  pkgd-1.5.0.json
templates/: dashboard.html  index.html  login.html  package.html  profile.html  profile_edit.html  register.html
