[package]
name = "pkgd-registry-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.20"
sha2 = "0.11.0"
hex = "0.4"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
semver = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.11", features = ["trace"] }